--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -4,10 +4,10 @@
 
 .nav-menu {
   display: flex;
-  padding: 51px 11px 54px 20px;
+  padding: 50px 20px;
   border-radius: 20px;
-  width: calc(132px - 11px - 20px);
-  height: calc(989px - 51px - 54px);
+  width: auto;
+  height: 100%;
   background: rgb(0, 82, 162);
 }
 
@@ -18,6 +18,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  justify-content: space-between;
   gap: 95px;
 }
 
