--- a/src/style/config.css
+++ b/src/style/config.css
@@ -1,57 +1,26 @@
+
+
 body,
 html {
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    font-family: "Andika", "Arial", sans-serif;
 }
 
 
 body {
     width: calc(100% - 84px);
     height: max-content;
-    margin: 30px 42px 0;
-    
+    overflow-x: hidden;
 }
-
 
 #menu {
     width: max-content;
 }
 
-.nav-menu {
-    display: flex;
-    padding: 51px 11px 54px 20px;
-    border-radius: 20px;
-    width: calc(132px - 11px - 20px);
-    height: calc(989px - 51px - 54px);
-    background: rgb(0, 82, 162);
-}
 
-.nav-menu-wrapper {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    gap: 95px;
-}
-
-.nav-menu-item.logout {
-    margin-top: calc(130.06px - 95px);
-}
-
-.nav-menu-items-container {
-    display: flex;
-    flex-direction: column;
-    gap: 80px;
-}
-
-/* .chart-container {
-    width: max-content;
-} */
 
 #activityChart {
     display: block !important;
@@ -180,16 +149,6 @@ body {
     background: rgb(245, 245, 247);
     border-radius: 20px;
     padding: 9.5px 9.6px;
-}
-
-.events-item-image-container {
-    width: 72.26px;
-    height: 76px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: white;
-    border-radius: 12px;
 }
 
 .events-item-title {
