--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,6 +1,3 @@
-
-/* header styles */
-
 #menu {
   width: max-content;
 }
@@ -15,21 +12,17 @@
   height: 277px !important;
   width: 100% !important;
 }
-/* home styles */
 
 .home-page {
   display: flex;
   justify-content: space-between;
-  /* gap: 50px;
-  width: 100%; */
+  padding: 20px;
 }
 
 .home-page-content {
   width: calc(95% - 101px);
   display: flex;
   justify-content: space-between;
-  /* justify-content: space-between;
-  width: 100%; */
 }
 
 .home-page-content-left-side {
