--- a/src/style/settings.css
+++ b/src/style/settings.css
@@ -1,20 +1,8 @@
-html,
-body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  font-family: "Andika", "Arial", sans-serif;
-}
-
-body {
-  margin: 30px 42px 0;
-}
-
 .settings-page {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   width: 100%;
+  padding: 20px;
 }
 
 .settings-content {
@@ -60,7 +48,6 @@ body {
 
 .right-side-title-input {
   color: rgb(102, 102, 102);
-  font-family: Andika;
   font-size: 18px;
   font-weight: 400;
   line-height: 32px;
