--- a/src/style/statistic.css
+++ b/src/style/statistic.css
@@ -2,6 +2,7 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
+  padding: 20px;
 }
 
 .statistic-page-content {
@@ -43,7 +44,6 @@ select {
   padding: 6px 15px;
   border: none;
   outline: none;
-  font-family: Andika;
   color: rgb(121, 121, 121);
   font-size: 18px;
   font-weight: 400;
@@ -66,7 +66,6 @@ input {
   text-align: center;
   padding: 7px 47px;
   color: rgb(0, 102, 203);
-  font-family: Andika;
   font-size: 18px;
   font-weight: 400;
   line-height: 160%;
