--- a/src/Pages/Calendar/calendar.css
+++ b/src/Pages/Calendar/calendar.css
@@ -128,6 +128,7 @@
   border: 2px solid rgb(4, 67, 130);
   border-radius: 10px;
   cursor: pointer;
+  text-decoration: none;
 }
 
 /* events item styles 👆🏼*/
