--- a/src/Pages/Calendar/calendar.css
+++ b/src/Pages/Calendar/calendar.css
@@ -108,10 +108,10 @@
   gap: 20px;
 }
 
-.events-item-date-container img {
+/* .events-item-date-container img {
   width: 48.86px;
   height: 44.41px;
-}
+} */
 
 .events-item-button {
   color: rgb(4, 67, 130);
