--- a/src/Pages/Authorization/login.css
+++ b/src/Pages/Authorization/login.css
@@ -19,7 +19,7 @@
   justify-content: center;
   align-items: center;
   width: calc(100% - 621px);
-  gap: 80px;
+  gap: 20px;
 }
 
 .right-side-auth-title {
@@ -34,7 +34,7 @@
 .auth-form-container {
   display: flex;
   flex-direction: column;
-  gap: 18px;
+  gap: 20px;
   width: 750px;
 }
 
@@ -80,7 +80,7 @@
   line-height: 32px;
   letter-spacing: 0px;
   text-align: center;
-  margin-top: calc(216px - 18px);
+  margin-top: 20px;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1390px) {
