--- a/src/Pages/Home/index.css
+++ b/src/Pages/Home/index.css
@@ -34,10 +34,10 @@
 
 .user-profile {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   justify-content: space-between;
   width: calc(100% - 30px - 29px);
-  height: calc(181px - 34.86px);
+  height: 21%;
   padding: 34.86px 30px 0 29px;
   background: rgb(245, 245, 247);
   border-radius: 20px;
@@ -45,6 +45,9 @@
 
 .user-profile-left-side {
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .greeting-container {
@@ -90,7 +93,7 @@
 
 .events-tabs-container {
   display: flex;
-  gap: 47px;
+  gap: 20px;
   align-items: center;
 }
 
