--- a/src/Pages/Statistics/statistic.css
+++ b/src/Pages/Statistics/statistic.css
@@ -92,10 +92,10 @@ input {
 }
 
 .chart-container {
-  border-radius: 43px;
+  border-radius: 20px;
   box-shadow: 5px 34px 80px 0px rgba(0, 0, 0, 0.25);
   background: rgb(255, 255, 255);
-  width: calc(90% - 450px);
+  width: -webkit-fill-available;
   padding: 81px 235px;
 }
 
