--- a/src/Pages/Students/student.css
+++ b/src/Pages/Students/student.css
@@ -1,5 +1,6 @@
 .student-page {
   display: flex;
+  justify-content: center;
   padding: 20px;
 }
 
@@ -10,17 +11,18 @@
   flex-direction: column;
   align-items: center;
   gap: 18px;
+  padding: 0% 5%
 }
 
 .student-page-header {
-  width: 85%;
+  width: 92%;
   padding: 30px 50px;
   display: flex;
   gap: 20px;
   align-items: center;
   justify-content: space-between;
-  border-radius: 43px;
-  box-shadow: 0px 10px 60px 0px rgba(226, 236, 249, 0.5);
+  border-radius: 20px;
+  box-shadow: 0px 5px 30px 0px rgba(0, 0, 0, 0.25);
   background: rgb(255, 255, 255);
 }
 
@@ -71,8 +73,8 @@
 
 .student-page-body {
   padding: 55px 59px;
-  border-radius: 43px;
-  box-shadow: 0px 10px 60px 0px rgba(226, 236, 249, 0.5);
+  border-radius: 20px;
+  box-shadow: 5px 10px 40px 0px rgba(0, 0, 0, 0.25);
   background: rgb(255, 255, 255);
 }
 
