--- a/src/Pages/Statistics/statistic.css
+++ b/src/Pages/Statistics/statistic.css
@@ -64,7 +64,7 @@ input {
   border: none;
   outline: none;
   text-align: center;
-  padding: 7px 47px;
+  padding: 5px 25px;
   color: rgb(0, 102, 203);
   font-size: 18px;
   font-weight: 400;
@@ -91,13 +91,13 @@ input {
   background: rgb(0, 74, 148);
 }
 
-.chart-container {
+/* .chart-container {
   border-radius: 20px;
   box-shadow: 5px 34px 80px 0px rgba(0, 0, 0, 0.25);
   background: rgb(255, 255, 255);
   width: -webkit-fill-available;
   padding: 81px 235px;
-}
+} */
 
 @media screen and (min-width: 767px) and (max-width: 1024px) {
   body {
