--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -31,3 +31,18 @@
   flex-direction: column;
   gap: 80px;
 }
+
+/* Стили для иконок */
+.nav-menu-item .link img {
+  opacity: 0.6; /* Иконки по умолчанию тусклые */
+  transition: opacity 0.3s ease;
+}
+
+.nav-menu-item .link.active img {
+  opacity: 1; /* Активная иконка ярче */
+  filter: brightness(2); /* Делаем её ещё ярче */
+}
+
+.nav-menu-item .link:hover img {
+  opacity: 1; /* При наведении иконка становится ярче */
+}
