--- a/src/Pages/Calendar/calendar.css
+++ b/src/Pages/Calendar/calendar.css
@@ -281,6 +281,7 @@ p {
   line-height: 25.78px;
   letter-spacing: 0px;
   text-align: left;
+  line-height: 1.5;
 }
 
 .name-event-container p {
@@ -321,7 +322,7 @@ p {
 }
 
 #confirm-delete-button {
-  background-color: #ff4d4d;
+  background-color: #f63131;
   color: white;
   border: none;
   padding: 10px 20px;
