--- a/src/Pages/Home/index.css
+++ b/src/Pages/Home/index.css
@@ -49,7 +49,7 @@
   align-items: center;
   justify-content: space-between;
   width: calc(100% - 30px - 29px);
-  height: 18.2%;
+  /* height: 18.2%; */
   padding: 34.86px 30px 0 29px;
   background: rgb(245, 245, 247);
   border-radius: 20px;
@@ -304,6 +304,12 @@
   letter-spacing: 0px;
   text-align: left;
   margin-bottom: 35px;
+}
+
+.user-profile-right-side img{
+  position: relative;
+  top: 10px;
+
 }
 
 @media screen and (min-width: 767px) and (max-width: 1024px) {
