--- a/src/Pages/Home/index.css
+++ b/src/Pages/Home/index.css
@@ -454,6 +454,17 @@
   font-size: 14px;
 }
 
+.no-events-message {
+  width: 100%;
+  text-align: center;
+  padding: 30px 0px;
+  color: #666;
+  font-size: 16px;
+  background: rgb(245, 245, 247);
+  border-radius: 20px;
+  margin-top: 15px;
+}
+
 /* Анимация для новых уведомлений */
 @keyframes pulse {
   0% {
