--- a/src/Pages/Calendar/calendar.css
+++ b/src/Pages/Calendar/calendar.css
@@ -241,6 +241,8 @@
   background-color: rgba(0, 0, 0, 0.6);
   opacity: 0;
   transition: opacity 0.3s ease;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
 }
 
 .modal.active {
