--- a/src/Pages/Students/student.css
+++ b/src/Pages/Students/student.css
@@ -512,6 +512,7 @@ td.actions {
   display: flex;
   justify-content: center;
   align-items: center;
+  backdrop-filter: blur(5px);
   z-index: 1000;
 }
 
