--- a/src/Pages/Students/student.css
+++ b/src/Pages/Students/student.css
@@ -128,6 +128,45 @@
   text-align: left;
 }
 
+.export-btn {
+  border-radius: 12px;
+  background: #0052a2;
+  padding: 10px 30px;
+  color: rgb(255, 255, 255);
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 25.78px;
+  letter-spacing: 0px;
+  text-align: center;
+}
+
+.export-btn-student:disabled {
+  background-color: #6c757d;
+  cursor: not-allowed;
+}
+
+.excel-icon {
+  margin-right: 8px;
+  font-size: 20px;
+}
+
+.export-btn-student {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.add-icon {
+  margin-right: 8px;
+  font-size: 20px;
+}
+
+.add-btn-student {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .select {
   padding: 11px 15px;
   border-radius: 10px;
@@ -197,11 +236,13 @@ th {
 .student-cell {
   vertical-align: middle;
   text-align: left;
-  padding: 0px 30px; /* Выравнивание по левому краю для столбца "ФИО" */
+  padding: 0px 30px;
+  /* Выравнивание по левому краю для столбца "ФИО" */
 }
 
 .student-cell.center {
-  text-align: center; /* Выравнивание по центру для других столбцов */
+  text-align: center;
+  /* Выравнивание по центру для других столбцов */
 }
 
 .actions {
