--- a/src/Pages/Students/student.css
+++ b/src/Pages/Students/student.css
@@ -161,7 +161,7 @@
   font-size: 20px;
 }
 
-.add-btn-student {
+.add-btn {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -299,7 +299,7 @@ th {
   gap: 8px;
 }
 
-.add-btn-student {
+.add-btn {
   border-radius: 12px;
   background: #0052a2;
   padding: 10px 30px;
