--- a/src/Pages/Students/student.css
+++ b/src/Pages/Students/student.css
@@ -129,7 +129,7 @@
 }
 
 .export-btn {
-  border-radius: 12px;
+  border-radius: 25px;
   background: #0052a2;
   padding: 10px 30px;
   color: rgb(255, 255, 255);
@@ -137,6 +137,8 @@
   font-weight: 400;
   line-height: 25.78px;
   letter-spacing: 0px;
+  display: flex;
+  align-items: center;
   text-align: center;
 }
 
@@ -213,6 +215,9 @@ th {
   cursor: pointer;
   user-select: none;
   position: relative;
+  display: flex;
+  align-items: stretch;
+  justify-content: center;
 }
 
 .sortable-header:hover {
@@ -221,7 +226,7 @@ th {
 
 .sort-icon {
   margin-left: 5px;
-  font-size: 12px;
+  font-size: 14px;
   color: white;
 }
 
@@ -300,7 +305,7 @@ th {
 }
 
 .add-btn {
-  border-radius: 12px;
+  border-radius: 25px;
   background: #0052a2;
   padding: 10px 30px;
   color: rgb(255, 255, 255);
