--- a/src/Pages/Teachers/teachers-page.css
+++ b/src/Pages/Teachers/teachers-page.css
@@ -1,13 +1,18 @@
 .teacher-page {
     display: flex;
     padding: 20px;
+    gap: 50px;
 }
 
 .teacher-page-content {
     flex: 1 1;
     flex-direction: column;
-    padding: 0px 50px;
+    padding: 50px;
     align-items: center;
+    box-shadow: 5px 10px 40px 0px rgba(0, 0, 0, 0.25);
+    background: rgb(255, 255, 255);
+    gap: 20px;
+    border-radius: 20px;
 }
 
 .teacher-page-body {
