--- a/src/Pages/Students/student.css
+++ b/src/Pages/Students/student.css
@@ -1,15 +1,3 @@
-/* Основные стили для страницы */
-.error-message {
-  color: #d32f2f; /* Красный цвет для текста ошибки */
-  background-color: #fde8e8; /* Светлый фон для контраста */
-  padding: 10px 15px; /* Внутренние отступы */
-  border-radius: 6px; /* Скругленные углы */
-  margin-bottom: 20px; /* Отступ снизу */
-  font-size: 14px; /* Размер шрифта */
-  border-left: 4px solid #d32f2f; /* Левая граница для акцента */
-}
-
-
 .student-page {
   display: flex;
   justify-content: center;
@@ -69,7 +57,7 @@
   justify-content: center;
   align-items: center;
   padding: 17px;
-  border-radius: 24px;
+  border-radius: 50%;
   background: rgb(4, 67, 130);
 }
 
@@ -269,12 +257,10 @@ th {
   vertical-align: middle;
   text-align: left;
   padding: 0px 30px;
-  /* Выравнивание по левому краю для столбца "ФИО" */
 }
 
 .student-cell.center {
   text-align: center;
-  /* Выравнивание по центру для других столбцов */
 }
 
 .actions {
