--- a/src/style/config.css
+++ b/src/style/config.css
@@ -5,6 +5,7 @@ html {
     margin: 0;
     padding: 0;
     font-family: "Andika", "Arial", sans-serif;
+    scroll-behavior: smooth;
 }
 
 
@@ -94,7 +95,6 @@ body {
     border-radius: 7px;
     justify-content: center;
     align-items: center;
-    /* padding: 12.31px 22.66px 8.13px 21.37px; */
     box-sizing: border-box;
     border: 2px solid rgb(4, 67, 130);
 
